templates/deployment.yaml
# Source: vfo-zds-loy/templates/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: vfo-zds-loy
  labels:
    helm.sh/chart: vfo-zds-loy-1.1.0
    app.kubernetes.io/name: vfo-zds-loy
    app.kubernetes.io/instance: vfo-zds-loy
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  revisionHistoryLimit: 3
  test: false
  replicas: 1
  selector:
    app.kubernetes.io/name: vfo-zds-loy
    app.kubernetes.io/instance: vfo-zds-loy
  template:
    metadata:
      annotations:
        checksum/secrets: 75ee592e61ac471fb1bfdc9031dfe083e61144422d9e19c506cc976c33d40a3e
        checksum/configmap: 8b5d22ca5bd3b9e8ea6a83bb7463e0858766c62e9e1b21fa15a07f4be271bd4d
      labels:
        app.kubernetes.io/name: vfo-zds-loy
        app.kubernetes.io/instance: vfo-zds-loy
    spec:
      imagePullSecrets:
        - name: zentity-docker-config-json-loy
      serviceAccountName: vfo-zds-loy
      securityContext:
        {}
      containers:
        - name: vfo-zds-loy
          securityContext:
            {}
          image: docker.zentity.com/com.zentity.gw.vfo/loy:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: secrets-volume
              mountPath: /etc/zds/secrets
              readOnly: true
            - name: config-volume
              mountPath: /etc/zds/config
              readOnly: true
            - name: pod-shared
              mountPath: /mnt/pod-shared
            - name: tomcatlog
              mountPath: /usr/local/tomcat/logs



          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Zen-Application
                  value: ReadinessProbe
                - name: Zen-AppVersion
                  value: self
                - name: Zen-OS
                  value: WEB
              path: /core/api/public/anonymous/ping/v1
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
            successThreshold: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Zen-Application
                  value: ReadinessProbe
                - name: Zen-AppVersion
                  value: self
                - name: Zen-OS
                  value: WEB
              path: /core/api/public/anonymous/ping/v1
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1


        - name: fluentd
          image: docker.zentity.com/com.zentity.k8s/fluentd:2.15.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /fluentd/etc
              readOnly: true
            - name: secrets-volume
              mountPath: /fluentd/secrets
              readOnly: true
            - name: pod-shared
              mountPath: /mnt/pod-shared
            - name: tomcatlog
              mountPath: /usr/local/tomcat/logs

          resources:
            {}
      volumes:
        - name: secrets-volume
          secret:
            secretName: vfo-zds-loy
            defaultMode: 0440
        - name: config-volume
          configMap:
            name: vfo-zds-loy
            defaultMode: 0440
        - name: pod-shared
          emptyDir: {}
        - name: tomcatlog
          emptyDir: {}
      hostAliases:
        - hostnames:
            - dc01.internal.vodafone.om
          ip: 10.14.3.185
        - hostnames:
            - dc02.internal.vodafone.om
          ip: 10.14.3.175
        - hostnames:
            - corpp-sit.ze.itcloud.vodafone.om
          ip: 10.14.144.204
